--- a/apps/svelte/app2/package.json
+++ b/apps/svelte/app2/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^20.14.9",
     "rollup": "^4.18.0",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.4",
